deploy: d2d7191ad6e5befc3f12d39b0eb59d67424ec007

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </head>
 
   <body>
-    <main><div class="profile-container"><div class="profile-image-container"><img class="profile-image" src="/images/me-min.jpg" alt="Just a picture of me"/></div><ul><li><a href="https://github.com/rcasto" target="_blank"><img src="/images/github.svg" alt="GitHub profile link"/></a></li><li><a href="https://www.linkedin.com/in/rcasto" target="_blank"><img src="/images/linkedin.png" alt="LinkedIn profile link"/></a></li><li><a href="mailto:me@rcasto.dev" target="_blank"><img src="/images/envelope.svg" alt="Contact via email"/></a></li></ul></div></main>
+    <main><div class="profile-container"><div class="profile-image-container"><img class="profile-image" src="/images/me-min.jpg" alt="Just a picture of me"/></div><ul><li><a href="https://github.com/rcasto" target="_blank" rel="noopener noreferrer" aria-label="GitHub profile"><img src="/images/github.svg" aria-hidden="true" alt=""/></a></li><li><a href="https://www.linkedin.com/in/rcasto" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn profile"><img src="/images/linkedin.png" aria-hidden="true" alt=""/></a></li><li><a href="mailto:me@rcasto.dev" target="_blank" rel="noopener noreferrer" aria-label="Contact via email"><img src="/images/envelope.svg" aria-hidden="true" alt=""/></a></li></ul></div><div class="ball ball-r"></div><div class="ball ball-g"></div><div class="ball ball-b"></div></main>
 
     <!-- <script defer src="https://unpkg.com/simplequad@2.0.0/dist/simplequad.umd.min.js"></script> -->
     <!-- <script defer src="/scripts/particle-canvas.js"></script> -->
